[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/pick_up.gd" type="Script" id=1]
[ext_resource path="res://Assets/chest_open_animo.png" type="Texture" id=2]
[ext_resource path="res://Assets/SFX/pickup.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 82, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 41, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 82, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 82, 41, 41 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 11.875 )

[node name="Pick-up" type="Area2D" groups=["pick_up_group"]]
modulate = Color( 1.2, 1.2, 1.2, 1 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="diss" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="picked_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.857
bus = "SoundEffects"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 1.08537, 1.08537 )
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.47035e-07, 3.125 )
shape = SubResource( 1 )

[node name="Light2D2" type="Light2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0.25, 2.5 )
scale = Vector2( 1.125, 0.738945 )
texture = ExtResource( 4 )
color = Color( 0.47, 0.07, 0.87, 1 )
energy = 1.3
range_item_cull_mask = 7

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="timeout" from="diss" to="." method="_on_diss_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
